# codebridge

./: .gitignore  .goreleaser.yml  CLAUDE.md  Cargo.toml  Makefile  PLAN.md  README.md  build.rs  go.mod  go.sum  install.sh  main.go
.github/workflows/: release.yml
internal/cli/: cli.go  web.go
internal/config/: config.go  config_test.go
internal/daemon/: codex.go  codex_test.go  daemon.go  daemon_test.go  stream.go  stream_test.go  tasks.go  tasks_test.go  watch.go
internal/hook/: hook.go  install.go  install_test.go
internal/ipc/: ipc.go  task.go
internal/notify/: notify.go  notify_test.go
internal/session/: session.go  session_test.go
internal/task/: task.go  task_test.go
internal/tui/: attach.go  canonical_darwin.go  canonical_other.go  config_menu.go  dashboard.go  dashboard_test.go  keys.go  keys_test.go  scope_test.go  task.go  task_test.go  tile.go  tile_test.go  worktree.go  worktree_test.go
internal/web/: config.go  messages.go  scope.go  server.go  upstream.go  web_test.go  worktrees.go  ws.go
src/: codex.rs  conductor.rs  config.rs  daemon.rs  integration.rs  lib.rs  main.rs  notify.rs  protocol.rs  session.rs  session_title.rs  sidebar.rs  task.rs  terminal_theme.rs  theme.rs  tui.rs  web.rs  worktree.rs
src/terminal/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  HistoryModal.tsx  KeyBar.tsx  SessionList.tsx  Spinner.tsx  StatusDot.tsx  TaskList.tsx  Term.tsx  WorktreePicker.tsx  format.ts  icons.tsx  keys.ts  main.tsx  ws.ts  (+2 more)
