[package]
name = "codebridge"
version = "0.4.0"
edition = "2021"
build = "build.rs"
description = "An agent-session multiplexer and manager"

[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = "0.29"
libc = "0.2"
portable-pty = "0.9"
qrcode = { version = "0.14", default-features = false }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
